--- a/bedrock/firefox/templates/firefox/firstrun/learnmore/learnmore.html
+++ b/bedrock/firefox/templates/firefox/firstrun/learnmore/learnmore.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% extends "firefox/whatsnew_42/base.html" %}
+{% extends "firefox/whatsnew/whatsnew-base-42.html" %}
 
 {% block gtm_page_id %}data-gtm-page-id="/firefox/firstrun/learnmore/"{% endblock %}
 
@@ -11,7 +11,7 @@
 {% block body_class %}firefox-up-to-date{% endblock %}
 
 {% block page_css %}
-  {% stylesheet 'firefox_whatsnew_42_a' %}
+  {% stylesheet 'firefox_whatsnew_42' %}
 {% endblock %}
 
 {% block optimizely %}
