--- a/media/css/pebbles/base/oldIE.scss
+++ b/media/css/pebbles/base/oldIE.scss
@@ -8,7 +8,8 @@
 @import
     '../includes/lib',
     'elements',
-    '../components/buttons';
+    '../components/buttons',
+    '../components/buttons-download';
 
 
 // @Fonts
